--- a/Final Project/src/virus_1.config
+++ b/Final Project/src/virus_1.config
@@ -1,13 +1,14 @@
-virus.population = 1000
+virus.population = 100000
 virus.infector = 5
-virus.days = 3
+virus.days = 365
 virus.name=covid-19
-virus.k=0.5
 virus.r=3
-virus.uom=0.6
-virus.eom=0.9
-virus.pot=50
-virus.ct=0.7
-virus.av=30
-virus.ev=0.99
-virus.barriers=0.3
+virus.uom=0.95
+virus.eom=0.99
+virus.pot=1500
+virus.ct=0.005
+virus.av=300
+virus.ev=0.99999
+virus.barriers=0.95
+virus.rr = 89
+virus.dateofv = 200
